--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -314,7 +314,12 @@
             <div class="col-md-12">
               <consolidated-dashboardreport></consolidated-dashboardreport>
             </div>
-          </section>     
+          </section>  
+          <section data-category="update-admission-info">
+            <div class="col-md-12">
+              <update-admission-info></update-admission-info>
+            </div>
+          </section>   
           </iron-pages>
           </div>
           </div>
