--- a/app/elements/appregfee-service/appregfee-service.html
+++ b/app/elements/appregfee-service/appregfee-service.html
@@ -544,6 +544,7 @@
         document.querySelector('adhoc-discount').autocompletearr(e.detail.response.returnval);
         document.querySelector('latefee-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('defaulter-update').autocompletearr(e.detail.response.returnval);
+        document.querySelector('update-admission-info').autocompletearr(e.detail.response.returnval);
       },
       fetchrtestudentadmissionsearchService:function(){
         this.fetchrtestudentadmissionsearchurl=sessionStorage.getItem("addrinfo")+"/fetchrtestudentadmissionsearch-service";
