--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -276,3 +276,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="chequecollection-report/chequecollection-report.html">
 <link rel="import" href="consolidated-dashboardreport/consolidated-dashboardreport.html">
 <link rel="import" href="consolidated-dashboardreport-service/consolidated-dashboardreport-service.html">
+<link rel="import" href="proof-card/proof-card.html">
+<link rel="import" href="update-admission-info/update-admission-info.html">
+<link rel="import" href="second-language-card/second-language-card.html">
+<link rel="import" href="third-language-card/third-language-card.html">
+<link rel="import" href="language-service/language-service.html">
