--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -281,3 +281,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="second-language-card/second-language-card.html">
 <link rel="import" href="third-language-card/third-language-card.html">
 <link rel="import" href="language-service/language-service.html">
+<link rel="import" href="proof-update-card/proof-update-card.html">
