--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -282,3 +282,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="third-language-card/third-language-card.html">
 <link rel="import" href="language-service/language-service.html">
 <link rel="import" href="proof-update-card/proof-update-card.html">
+<link rel="import" href="deletediscount-card/deletediscount-card.html">
+<link rel="import" href="deletediscount-item-card/deletediscount-item-card.html">
