--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -319,6 +319,11 @@
             <div class="col-md-12">
               <update-admission-info></update-admission-info>
             </div>
+          </section> 
+          <section data-category="deletediscount-card">
+            <div class="col-md-12">
+              <deletediscount-card></deletediscount-card>
+            </div>
           </section>   
           </iron-pages>
           </div>
