--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -480,7 +480,10 @@
           <a href="" aria-hidden="true"><i class="fa fa-table fa-fw"></i>Process<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
            <li id="discounts">
-            <a href="" aria-hidden="true" on-click="FnAddDiscount">Discounts</a>
+            <a href="" aria-hidden="true" on-click="FnAddDiscount">Attach Discount</a>
+           </li> 
+           <li id="deletediscounts">
+            <a href="" aria-hidden="true" on-click="FnDeleteDiscount">Delete Discount</a>
            </li> 
            <li id="discounts">
             <a href="" aria-hidden="true" on-click="FnAdhocDiscount">Adhoc Discount</a>
@@ -1152,6 +1155,11 @@
         document.querySelector('app-list').setPage("adddiscount","Add Discount");
         document.querySelector('attachdiscount-card').callService();
         document.querySelector('attachdiscount-card').ready();
+      },
+      FnDeleteDiscount:function(){
+        document.querySelector('app-list').setPage("deletediscount-card","Delete Discount");
+        document.querySelector('deletediscount-card').callService();
+        document.querySelector('deletediscount-card').ready();
       },
       FnSearchReceipt:function(){
         this.$.scheduleservice.fetchacademicyearService();        
